--- a/src/pages/DetailPage/components/DetailItem/DetailItem.module.scss
+++ b/src/pages/DetailPage/components/DetailItem/DetailItem.module.scss
@@ -74,6 +74,7 @@
         & > svg {
           height: 14px;
           margin-right: 5px;
+          cursor: pointer;
 
           g,
           path,
